Fixed weapon's type. Added a test material and a melee weapon.

--- a/src/main/resources/assets/sk17ump9/lang/en_us.lang
+++ b/src/main/resources/assets/sk17ump9/lang/en_us.lang
@@ -1,2 +1,6 @@
+item.ob_ingot.name=Obsidian Ingot
+item.ex_sw.name=Test Excalibur
 item.ump45_test.name=Test UMP45
 item.ump9.name=UMP9
+
+tile.ob_ingot_block.name=Obsidian Ingot Block
