--- a/src/main/resources/assets/sk17ump9/lang/en_us.lang
+++ b/src/main/resources/assets/sk17ump9/lang/en_us.lang
@@ -1,9 +1,9 @@
-item.ob_ingot.name=Obsidian Ingot
-item.ex_sw.name=Test Excalibur
+item.vibranium_ingot.name=Vibranium Ingot
+item.excalibur.name=Test Excalibur
 item.ump45_test.name=Test UMP45
 item.ump9.name=UMP9
 item.9mm.name=9MM Ammo
 
 entity.9mm.name=9MM Ammo
 
-tile.ob_ingot_block.name=Obsidian Ingot Block
+tile.vibranium_block.name=Vibranium Block
